--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,14 +1,22 @@
 .cards {
   margin-top: 200px;
+  display: grid;
 }
 .card__list {
   list-style: none;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
 }
 .card {
   background: #ffffff;
   border-radius: 10px;
   width: 282px;
   height: 361px;
+  flex-direction: column;
 }
 .card__image {
   height: 282px;
@@ -17,6 +25,7 @@
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 .card__title {
+  display: flex;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
@@ -25,6 +34,9 @@
   width: 142px;
   height: 29px;
   color: #000000;
+  padding: 0 20px 30px 0;
+  align-items: center;
+  justify-content: space-between;
 }
 .card__like-button {
   background: url(../images/likebutton.svg) #000000;
