--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,5 @@
 .cards {
-  margin-top: 200px;
+  margin-top: 30px;
   display: grid;
 }
 .card__list {
@@ -31,12 +31,11 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  width: 142px;
-  height: 29px;
   color: #000000;
-  padding: 0 20px 30px 0;
+  padding: 25px 20px 25px 20px;
   align-items: center;
   justify-content: space-between;
+  margin: 0;
 }
 .card__like-button {
   background: url(../images/likebutton.svg) #000000;
