--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,3 +2,9 @@
   background-color: black;
   margin: 119px 200px 0 200px;
 }
+.page__section {
+  max-width: 880px;
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+}
