--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,20 @@
 .page {
   background-color: black;
-  margin: 119px 200px 0 200px;
+  color: white;
+}
+.page__content {
+  margin: 0 200px 0 200px;
 }
 .page__section {
   max-width: 880px;
   width: 100%;
   position: relative;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 1100px) {
+  .page__section {
+    margin: 0 20px;
+    max-width: calc(100% - 40px);
+  }
 }
