--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,9 +1,16 @@
 .profile {
+  display: flex;
+  justify-content: space-between;
 }
 .profile__picture {
   width: 120px;
   height: 120px;
   background: #c4c4c4;
+  border-radius: 50%;
+}
+.profile__info {
+  height: 120px;
+  width: 880px;
 }
 .profile__title {
   width: 373px;
@@ -14,9 +21,13 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  margin: 0 0 7px 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 .profile__edit-button {
+  background: url(../images/edit-button.svg) black;
   height: 10px;
   width: 10px;
   border-radius: 0px;
@@ -30,10 +41,12 @@
   width: 415px;
   height: 22px;
   color: #ffffff;
+  display: flex;
+  align-items: flex-start;
 }
 .profile__plus-button {
+  background: url(../images/plus.svg) black;
   height: 22px;
   width: 22px;
-  border-radius: 0px;
-  margin: 208px 264px 0 0;
+  margin-bottom: 23px;
 }
