--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,6 +1,8 @@
 .cards {
-  margin-top: 30px;
+  margin: 30px auto 0 auto;
   display: grid;
+  max-width: 880px;
+  width: 100%;
 }
 .card__list {
   list-style: none;
