--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,12 +1,12 @@
 .profile {
   display: flex;
-  justify-content: space-between;
 }
 .profile__picture {
   width: 120px;
   height: 120px;
   background: #c4c4c4;
   border-radius: 50%;
+  margin-right: 30px;
 }
 .profile__info {
   height: 120px;
@@ -22,15 +22,14 @@
   font-size: 42px;
   line-height: 48px;
   margin: 0;
+}
+.profile__title-container {
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
 }
 .profile__edit-button {
   background: url(../images/edit-button.svg) black;
-  height: 10px;
-  width: 10px;
-  border-radius: 0px;
+  height: 24px;
+  width: 24px;
 }
 .profile__description {
   font-family: "Inter";
