--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,10 +1,12 @@
 .footer__copyright {
-  width: 318px;
-  height: 18px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   color: #545454;
+  margin-top: 67px;
+  margin-right: 200px;
+  margin-bottom: 60px;
+  max-width: 880px;
 }
