--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,6 +1,5 @@
 .header {
   height: 74px;
-  margin-top: 45px;
   max-width: 880px;
 }
 .header__image {
@@ -8,6 +7,8 @@
   height: 33px;
 }
 .header__image-container {
+  width: 880px;
+  margin: 0 auto;
 }
 .header__line {
   position: absolute;
