--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -42,10 +42,15 @@
   color: #ffffff;
   display: flex;
   align-items: flex-start;
+  background-repeat: no-repeat;
 }
 .profile__plus-button {
   background: url(../images/plus.svg) black;
   height: 22px;
   width: 22px;
   margin-bottom: 23px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-sizing: border-box;
 }
