--- a/blocks/card.css
+++ b/blocks/card.css
@@ -39,9 +39,10 @@
   padding: 25px 20px 25px 20px;
   align-items: center;
   justify-content: space-between;
-  margin: 0;
-  width: 193px;
+  margin: auto 0;
+  width: 100%;
   height: 29px;
+  box-sizing: border-box;
 }
 .card__description {
   text-overflow: ellipsis;
