--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,3 +1,7 @@
+.footer {
+  margin-top: 67px;
+  margin-bottom: 60px;
+}
 .footer__copyright {
   font-family: "Inter";
   font-style: normal;
@@ -5,8 +9,4 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
-  margin-top: 67px;
-  margin-right: 200px;
-  margin-bottom: 60px;
-  max-width: 880px;
 }
