--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,6 +1,9 @@
 .profile {
   display: flex;
 }
+.page__section {
+  margin-bottom: 51px;
+}
 .profile__picture {
   width: 120px;
   height: 120px;
@@ -26,11 +29,7 @@
 .profile__title-container {
   display: flex;
 }
-.profile__edit-button {
-  background: url(../images/edit-button.svg) black;
-  height: 24px;
-  width: 24px;
-}
+
 .profile__description {
   font-family: "Inter";
   font-style: normal;
@@ -43,14 +42,32 @@
   display: flex;
   align-items: flex-start;
   background-repeat: no-repeat;
+  margin: 16px 0 0 0;
 }
-.profile__plus-button {
-  background: url(../images/plus.svg) black;
+.profile__edit-button {
+  height: 24px;
+  width: 24px;
+  background-color: black;
+  box-sizing: border-box;
+  border: 1px solid #ffffff;
+}
+.profile__edit-button-icon {
+  height: 10px;
+  width: 10px;
+}
+
+.profile__add-button {
+  margin-bottom: 35px;
+  padding: 14px 64px;
+  background-color: black;
+  box-sizing: border-box;
+  border-radius: 2px;
+  height: 50px;
+  width: 150px;
+  border: 1px solid #ffffff;
+}
+
+.profile__add-button-icon {
   height: 22px;
   width: 22px;
-  margin-bottom: 23px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  box-sizing: border-box;
 }
