--- a/blocks/card.css
+++ b/blocks/card.css
@@ -57,3 +57,63 @@
   width: 21px;
   border-style: none;
 }
+@media screen and (max-width: 470px) {
+  .card__list {
+    grid-template-columns: repeat(auto-fit, 100%);
+    padding: 0 16px;
+    justify-content: space-between;
+    grid-gap: 20px 0;
+  }
+  .card {
+    width: 100%;
+    height: auto;
+  }
+  .card__image {
+    height: auto;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+    transform: none;
+  }
+  .card__title {
+    padding: 20px 16px;
+  }
+}
+@media screen and (max-width: 665px) {
+  .card__list {
+    grid-template-columns: repeat(auto-fit, 100%);
+    grid-gap: 20px;
+  }
+  .card {
+    width: 100%;
+  }
+  .card__title {
+    font-size: 20px;
+    line-height: 24px;
+    padding: 20px;
+  }
+  .card__image {
+    height: auto;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+    transform: none;
+  }
+}
+@media (max-width: 999px) {
+  .card__list {
+    grid-template-columns: repeat(auto-fit, calc(50% - 10px));
+  }
+  .card {
+    width: calc(50% - 10px);
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .card__list {
+    grid-template-columns: repeat(auto-fit, calc(50% - 8.5px));
+    grid-gap: 20px;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .card__list {
+    grid-template-columns: repeat(auto-fit, 250px);
+  }
+}
