--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,106 +14,42 @@
   margin: 0;
 }
 .card {
-  background: #ffffff;
   border-radius: 10px;
-  width: 282px;
-  height: 361px;
   flex-direction: column;
   display: flex;
-  align-items: flex-start;
+  overflow: hidden;
 }
 .card__image {
-  height: 282px;
   width: 282px;
-  border-radius: 10px 10px 0 0;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
+  height: 282px;
+  min-height: 282px;
+  object-fit: cover;
 }
+
 .card__title {
-  display: flex;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 900;
+  max-width: 220px;
   font-size: 24px;
+  font-weight: 900;
   line-height: 29px;
-  color: #000000;
-  padding: 25px 20px 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-  margin: auto 0;
-  width: 100%;
-  height: 29px;
-  box-sizing: border-box;
-}
-.card__description {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin: 0;
+}
+.card__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  padding: 25px 15px 31px 21px;
+  color: black;
 }
 .card__like-button {
-  display: flex;
-  justify-content: flex-end;
-  background: url(../images/heart.svg) white;
-  height: 18px;
   width: 21px;
-  border-style: none;
-}
-@media screen and (max-width: 470px) {
-  .card__list {
-    grid-template-columns: repeat(auto-fit, 100%);
-    padding: 0 16px;
-    justify-content: space-between;
-    grid-gap: 20px 0;
-  }
-  .card {
-    width: 100%;
-    height: auto;
-  }
-  .card__image {
-    height: auto;
-    width: 100%;
-    border-radius: 10px 10px 0 0;
-    transform: none;
-  }
-  .card__title {
-    padding: 20px 16px;
-  }
-}
-@media screen and (max-width: 665px) {
-  .card__list {
-    grid-template-columns: repeat(auto-fit, 100%);
-    grid-gap: 20px;
-  }
-  .card {
-    width: 100%;
-  }
-  .card__title {
-    font-size: 20px;
-    line-height: 24px;
-    padding: 20px;
-  }
-  .card__image {
-    height: auto;
-    width: 100%;
-    border-radius: 10px 10px 0 0;
-    transform: none;
-  }
-}
-@media (max-width: 999px) {
-  .card__list {
-    grid-template-columns: repeat(auto-fit, calc(50% - 10px));
-  }
-  .card {
-    width: calc(50% - 10px);
-  }
-}
-@media only screen and (max-width: 1100px) {
-  .card__list {
-    grid-template-columns: repeat(auto-fit, calc(50% - 8.5px));
-    grid-gap: 20px;
-  }
-}
-@media screen and (max-width: 1500px) {
-  .card__list {
-    grid-template-columns: repeat(auto-fit, 250px);
-  }
+  height: 18px;
+  background: transparent url(../images/heart.svg) center no-repeat;
+  background-size: 21px 18px;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
