--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,10 +11,7 @@
   margin: 0 auto;
 }
 .header__line {
-  position: absolute;
-  max-width: 880px;
-  height: 0px;
   opacity: 0.7;
   border: 1px solid #545454;
-  margin-bottom: 62px;
+  margin: 41px auto 62px auto;
 }
