--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -16,18 +16,18 @@
   width: 880px;
 }
 .profile__title {
-  width: 373px;
-  height: 48px;
   color: #ffffff;
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  margin: 0;
+  margin: 0 14px 0 0;
 }
 .profile__title-container {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 .profile__description {
   font-family: "Inter";
