--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,9 +1,6 @@
 .profile {
   display: flex;
 }
-.page__section {
-  margin-bottom: 51px;
-}
 .profile__picture {
   width: 120px;
   height: 120px;
@@ -69,4 +66,9 @@
 .profile__add-button-icon {
   height: 22px;
   width: 22px;
+}
+
+@media screen and (max-width: 750px) {
+  .profile {
+  }
 }
