--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,19 +1,22 @@
 .page {
-  background-color: black;
-  color: white;
-  margin: 0;
+  background: #000;
 }
 .page__content {
-  margin: 0 auto;
+  padding: 0 20px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
 }
 .page__section {
-  max-width: 880px;
   width: 100%;
+  max-width: 882px;
+  box-sizing: border-box;
   position: relative;
   margin: 0 auto;
+  display: flex;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .page__content {
     margin: 0 20px;
     max-width: calc(100% - 20px);
@@ -26,4 +29,4 @@
     width: 100%;
     align-items: center;
   }
-}
+} */
