--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,19 +1,36 @@
-.header__image {
-  max-width: 173px;
+.header {
+  min-height: 120px;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  margin-left: 200px;
+}
+.header__logo {
+  width: 173px;
   height: 33px;
-  margin-top: 45px;
+  object-fit: contain;
 }
-.header__image-container {
+
+.header::before {
+  content: "";
   width: 880px;
-  margin: 0 auto;
-}
-.header__line {
+  height: 1px;
   opacity: 0.7;
-  border: 1px solid #545454;
-  margin: 41px auto 62px auto;
+  background: #545454;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 @media screen and (max-width: 480px) {
-  .header__image-container {
-    width: 100%;
+  .header {
+    min-height: 85px;
+  }
+  .header::before {
+    width: calc(100% + 40px);
+  }
+  .header__logo {
+    width: 126px;
+    height: 24px;
+    margin: 0 0 0 7px;
   }
 }
