--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,7 +3,13 @@
   display: flex;
   align-items: center;
   flex-shrink: 0;
-  margin-left: 200px;
+  border-bottom: 1px solid #545454;
+  width: 100%;
+  max-width: 882px;
+  box-sizing: border-box;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
 }
 .header__logo {
   width: 173px;
@@ -11,26 +17,9 @@
   object-fit: contain;
 }
 
-.header::before {
-  content: "";
-  width: 880px;
-  height: 1px;
-  opacity: 0.7;
-  background: #545454;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 621px) {
   .header {
-    min-height: 85px;
-  }
-  .header::before {
-    width: calc(100% + 40px);
-  }
-  .header__logo {
-    width: 126px;
-    height: 24px;
-    margin: 0 0 0 7px;
+    width: 100%;
+    margin: 0;
   }
 }
