--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,12 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/card.css);
 @import url(../blocks/footer.css);
-@import url(../blocks/content.css);
 @import url(../blocks/header.css);
 @import url(../blocks/page.css);
 @import url(../blocks/profile.css);
-@import url(../blocks/line.css);
+@import url(../vendor/fonts/Inter-Black.woff);
+@import url(../vendor/fonts/Inter-Black.woff2);
+@import url(../vendor/fonts/Inter-Medium.woff);
+@import url(../vendor/fonts/Inter-Medium.woff2);
+@import url(../vendor/fonts/Inter-Regular.woff);
+@import url(../vendor/fonts/Inter-Regular.woff2);
