--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -3,7 +3,7 @@
   display: grid;
   max-width: 880px;
   width: 100%;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 400px;
   font-size: 14px;
 }
