--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -25,7 +25,7 @@
   grid-area: title;
 }
 .profile__description {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
