--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../blocks/card.css);
+@import url(../blocks/cards.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/header.css);
 @import url(../blocks/page.css);
