--- a/pages/index.css
+++ b/pages/index.css
@@ -4,9 +4,4 @@
 @import url(../blocks/header.css);
 @import url(../blocks/page.css);
 @import url(../blocks/profile.css);
-@import url(../vendor/fonts/Inter-Black.woff);
-@import url(../vendor/fonts/Inter-Black.woff2);
-@import url(../vendor/fonts/Inter-Medium.woff);
-@import url(../vendor/fonts/Inter-Medium.woff2);
-@import url(../vendor/fonts/Inter-Regular.woff);
-@import url(../vendor/fonts/Inter-Regular.woff2);
+@import url(../vendor/fonts.css);
