--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -4,8 +4,12 @@
   max-width: 880px;
   width: 100%;
   font-family: "Inter", "Arial", sans-serif;
-  font-weight: 400px;
+  font-weight: 900;
   font-size: 14px;
+  border-radius: 10px;
+  flex-direction: column;
+  display: flex;
+  overflow: hidden;
 }
 .cards__list {
   list-style: none;
@@ -16,12 +20,7 @@
   padding: 0;
   margin: 0;
 }
-.card {
-  border-radius: 10px;
-  flex-direction: column;
-  display: flex;
-  overflow: hidden;
-}
+
 .card__image {
   width: 282px;
   height: 282px;
