--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -9,6 +9,7 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
+  margin: 0;
 }
 @media screen and (max-width: 621px) {
   .footer__copyright {
