--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -16,13 +16,16 @@
 
 .profile__title {
   color: #ffffff;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   margin: 0;
   grid-area: title;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .profile__description {
   font-family: "Inter", "Arial", sans-serif;
@@ -55,7 +58,7 @@
   background: transparent url("../images/edit-button.svg") center no-repeat;
   background-size: 10px 10px;
   border: 1px solid #ffffff;
-  grid-area: "button";
+  grid-area: button;
   align-self: center;
   padding: 0;
   margin: 0;
@@ -67,7 +70,7 @@
 
 .profile__add-button {
   padding: 14px 64px;
-  background-color: black;
+  background-color: transparent;
   box-sizing: border-box;
   border-radius: 2px;
   height: 50px;
@@ -94,8 +97,6 @@
 
   .profile__info {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     margin: 29px 0 33px 0;
     max-width: 320px;
@@ -104,7 +105,7 @@
 
   .profile__title {
     font-size: 22px;
-    max-width: 222px;
+    max-width: 100%;
   }
 
   .profile__description {
