--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -54,4 +54,11 @@
   border: none;
   margin: 0;
   padding: 0;
+  cursor: pointer;
+}
+.card__like-button:hover {
+  background-image: url(../images/hearthover.svg);
+  opacity: 0.5;
+  width: 20px;
+  height: 18px;
 }
