--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   padding: 40px 0 32px;
+  margin-bottom: 51px;
 }
 .profile__info {
   display: flex;
@@ -62,12 +63,16 @@
   align-self: center;
   padding: 0;
   margin: 0;
+  cursor: pointer;
 }
 .profile__edit-button-icon {
   height: 10px;
   width: 10px;
+  cursor: pointer;
 }
-
+.profile__edit-button:hover {
+  opacity: 0.6;
+}
 .profile__add-button {
   padding: 14px 64px;
   background-color: transparent;
@@ -80,27 +85,29 @@
   align-items: center;
   justify-content: center;
   margin-left: 165px;
+  cursor: pointer;
 }
 
 .profile__add-button-icon {
   height: 22px;
   width: 22px;
+  cursor: pointer;
 }
-
+.profile__add-button:hover {
+  opacity: 0.6;
+}
 @media screen and (max-width: 621px) {
   .profile {
     padding: 0;
     margin: 43px 0 36px;
-    flex-direction: column;
-    text-align: center;
+    justify-content: center;
   }
 
   .profile__info {
     width: 100%;
-    justify-content: center;
-    margin: 29px 0 33px 0;
+    margin: 29px 0 33px 15px;
     max-width: 320px;
-    gap: 14px 10px;
+    gap: 7px 18px;
   }
 
   .profile__title {
@@ -116,13 +123,14 @@
   }
 
   .profile__picture {
-    margin-right: 0;
+    margin-right: 10px;
+    margin-left: 15px;
   }
 
   .profile__add-button {
     width: 100%;
-    max-width: 282px;
-    margin: 0 auto;
+    max-width: 150px;
+    margin: 0 20px 0 0;
   }
 
   .profile__edit-button {
