--- a/blocks/page.css
+++ b/blocks/page.css
@@ -14,3 +14,9 @@
   position: relative;
   margin: 0 auto;
 }
+@media screen and (max-width: 320px) {
+  .page__section {
+    flex-wrap: wrap;
+    margin: 42px 19px 36px 19px;
+  }
+}
