--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -139,3 +139,22 @@
     background-size: 8px 8px;
   }
 }
+@media screen and (max-width: 320px) {
+  .profile__info {
+    justify-content: center;
+    gap: 14px 10px;
+    margin: 26px 19px 36px 19px;
+  }
+  .profile__picture {
+    margin: 0;
+  }
+  .profile__add-button {
+    margin: 0;
+    max-width: 282px;
+  }
+  .profile__description {
+    padding: 0 19px 0 19px;
+    display: flex;
+    justify-content: center;
+  }
+}
