--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -21,3 +21,14 @@
     padding-left: 60px;
   }
 }
+@media screen and (max-width: 320px) {
+  .footer {
+    max-width: 282px;
+  }
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
+    padding: 0;
+    margin: 48px 19px 36px 19px;
+  }
+}
