--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,3 +4,41 @@
   display: flex;
   overflow: hidden;
 }
+.card__image {
+  width: 282px;
+  height: 282px;
+  min-height: 282px;
+  object-fit: cover;
+}
+
+.card__title {
+  max-width: 220px;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0;
+}
+.card__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  padding: 25px 15px 31px 21px;
+  color: black;
+}
+.card__like-button {
+  width: 21px;
+  height: 18px;
+  background: transparent url(../images/heart.svg) center no-repeat;
+  background-size: 21px 18px;
+  border: none;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+.card__like-button:hover {
+  opacity: 0.5;
+}
