--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,13 +3,12 @@
   display: flex;
   align-items: center;
   flex-shrink: 0;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   width: 100%;
   max-width: 882px;
   box-sizing: border-box;
   position: relative;
   margin: 0 auto;
-  opacity: 0.7;
 }
 .header__logo {
   width: 173px;
