--- a/blocks/page.css
+++ b/blocks/page.css
@@ -14,9 +14,10 @@
   position: relative;
   margin: 0 auto;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 580px) {
   .page__section {
     flex-wrap: wrap;
-    margin: 42px 19px 36px 19px;
+    flex-direction: column;
+    margin: 0 150px;
   }
 }
