--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -14,17 +14,19 @@
 
 @media screen and (max-width: 621px) {
   .footer__copyright {
-    padding-left: 18px;
+    padding-left: 19px;
   }
 }
 @media screen and (max-width: 580px) {
-  .footer {
-    max-width: 282px;
-  }
   .footer__copyright {
     font-size: 14px;
     line-height: 17px;
     padding: 0;
-    margin: 48px 19px 36px 19px;
+    margin: auto 0 auto 150px;
   }
 }
+/* @media screen and (max-width: 320px) {
+  .footer {
+    margin: 0;
+  }
+} */
