--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,9 +27,9 @@
   line-height: 48px;
   margin: 0;
   grid-area: title;
-  /* text-overflow: ellipsis;
+  text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden; */
+  overflow: hidden;
 }
 .profile__description {
   font-family: "Inter", "Arial", sans-serif;
@@ -153,6 +153,33 @@
   .profile__description {
     padding: 0 19px 0 19px;
     display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 320px) {
+  .profile__info {
+    justify-content: center;
+
+    gap: 14px 10px;
+
+    margin: 26px 19px 36px 19px;
+  }
+
+  .profile__picture {
+    margin: 0;
+  }
+
+  .profile__add-button {
+    margin: 0;
+
+    max-width: 282px;
+  }
+
+  .profile__description {
+    padding: 0 19px 0 19px;
+
+    display: flex;
+
     justify-content: center;
   }
 }
