--- a/blocks/page.css
+++ b/blocks/page.css
@@ -6,6 +6,7 @@
   background-color: black;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .page__section {
   width: 100%;
@@ -14,10 +15,12 @@
   position: relative;
   margin: 0 auto;
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 320px) {
+  .page {
+    margin: 0 auto;
+  }
   .page__section {
     flex-wrap: wrap;
-    flex-direction: column;
-    margin: 0 150px;
+    margin: 48px 19px 36px 19px;
   }
 }
