--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -9,7 +9,7 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
-  margin: 0;
+  margin: 0 0 0 275px;
 }
 
 @media screen and (max-width: 621px) {
