--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,6 +1,6 @@
 .profile {
   color: #fff;
-  display: flex;
+  display: grid;
   align-items: center;
   padding: 40px 0 32px;
   margin-bottom: 51px;
@@ -99,6 +99,7 @@
 
 @media screen and (max-width: 480px) {
   .profile {
+    display: flex;
     flex-direction: column;
     margin: 0;
   }
@@ -114,11 +115,5 @@
   .profile__add-button {
     margin: 0 auto;
     width: 282px;
-  }
-  .footer {
-    width: 100%;
-  }
-  .footer__copyright {
-    margin: 48px 19px 36px 19px;
   }
 }
