--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,7 @@
 .footer {
-  margin-top: 67px;
-  margin-bottom: 60px;
+  margin: 0 auto;
+  /* margin-top: 67px;
+  margin-bottom: 60px; */
 }
 .footer__copyright {
   font-family: "Inter", "Arial", sans-serif;
@@ -12,21 +13,8 @@
   margin: 0 0 0 275px;
 }
 
-@media screen and (max-width: 621px) {
-  .footer__copyright {
-    padding-left: 19px;
-  }
-}
-@media screen and (max-width: 580px) {
-  .footer__copyright {
-    font-size: 14px;
-    line-height: 17px;
-    padding: 0;
-    margin: auto 0 auto 150px;
-  }
-}
-/* @media screen and (max-width: 320px) {
+@media screen and (max-width 480px) {
   .footer {
-    margin: 0;
+    max-width: 282px;
   }
-} */
+}
