--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,5 @@
 .footer {
   margin: 0 auto;
-  /* margin-top: 67px;
-  margin-bottom: 60px; */
 }
 .footer__copyright {
   font-family: "Inter", "Arial", sans-serif;
@@ -10,11 +8,19 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
-  margin: 0 0 0 275px;
+  max-width: 282px;
+  margin: 48px 19px 36px 0;
 }
-
-@media screen and (max-width 480px) {
+@media screen and (max-width: 621px) {
+  .footer__copyright {
+    padding-left: 18px;
+  }
+}
+@media screen and (max-width: 480px) {
   .footer {
     max-width: 282px;
+  }
+  .footer__copyright {
+    padding: 0;
   }
 }
