--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,6 +1,6 @@
 .profile {
   color: #fff;
-  display: grid;
+  display: flex;
   align-items: center;
   padding: 40px 0 32px;
   margin-bottom: 51px;
@@ -16,7 +16,7 @@
     "description description";
   grid-template-columns: minmax(auto, 373px) auto;
   grid-gap: 7px 18px;
-  max-width: 373px;
+  margin-right: 163px;
 }
 
 .profile__title {
@@ -31,6 +31,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 373px;
 }
 .profile__description {
   font-family: "Inter", "Arial", sans-serif;
@@ -96,24 +97,75 @@
 .profile__add-button:hover {
   opacity: 0.6;
 }
+@media screen and (max-width: 621px) {
+  .profile {
+    padding: 0;
+    margin: 43px 0 36px;
+    flex-direction: column;
+    text-align: center;
+  }
 
+  .profile__info {
+    width: 100%;
+    justify-content: center;
+    margin: 29px 0 33px 0;
+    max-width: 320px;
+    gap: 14px 10px;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    max-width: 222px;
+  }
+
+  .profile__description {
+    width: 100%;
+    font-size: 14px;
+    line-height: 17px;
+    max-width: 282px;
+  }
+
+  .profile__picture {
+    margin-right: 0;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    max-width: 282px;
+    margin: 0 auto;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: 8px 8px;
+  }
+}
 @media screen and (max-width: 480px) {
   .profile {
-    display: flex;
     flex-direction: column;
     margin: 0;
+  }
+  .profile__picture {
+    margin-top: 38px;
+  }
+  .profile__info {
+    display: grid;
+    justify-items: center;
+    max-width: 282px;
   }
   .profile__title {
     font-size: 22px;
     font-weight: 500;
     text-align: center;
+    max-width: 196px;
   }
   .profile__description {
     font-weight: 400;
     font-size: 14px;
   }
   .profile__add-button {
-    margin: 0 auto;
+    margin: 0 auto 36px;
     width: 282px;
   }
 }
