--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,6 @@
 .footer {
   margin: 0 auto;
+  max-width: 880px;
 }
 .footer__copyright {
   font-family: "Inter", "Arial", sans-serif;
@@ -16,7 +17,7 @@
     padding-left: 18px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 560px) {
   .footer {
     max-width: 282px;
   }
