--- a/blocks/header.css
+++ b/blocks/header.css
@@ -25,8 +25,12 @@
     margin-left: 27px;
   }
 }
+
 @media screen and (max-width: 480px) {
+  .header {
+    min-height: 85px;
+  }
   .header__logo {
-    margin-left: 27px;
+    max-width: 126px;
   }
 }
