--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,7 @@
 .page {
   background: #000;
   font-family: "Inter", "Arial", sans-serif;
+  padding: 0 19px;
 }
 .page__content {
   background-color: black;
