--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,7 +15,8 @@
     "description description";
   grid-template-columns: minmax(auto, 373px) auto;
   grid-gap: 7px 18px;
-  margin-right: 163px;
+  margin-right: auto;
+  max-width: 425px;
 }
 
 .profile__title {
@@ -96,6 +97,15 @@
 .profile__add-button:hover {
   opacity: 0.6;
 }
+@media screen and (max-width: 738px) {
+  .profile__title {
+    font-size: 28px;
+    max-width: 375px;
+  }
+  .profile__add-button {
+    width: 100px;
+  }
+}
 @media screen and (max-width: 621px) {
   .profile {
     padding: 0;
@@ -150,13 +160,13 @@
   .profile__info {
     display: grid;
     justify-items: center;
-    max-width: 282px;
+    max-width: 220px;
   }
   .profile__title {
     font-size: 22px;
     font-weight: 500;
     text-align: center;
-    max-width: 196px;
+    max-height: 40px;
   }
   .profile__description {
     font-weight: 400;
