--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,6 +12,7 @@
   max-width: 282px;
   margin: 48px 19px 36px 0;
 }
+
 @media screen and (max-width: 621px) {
   .footer__copyright {
     padding-left: 18px;
@@ -23,5 +24,6 @@
   }
   .footer__copyright {
     padding: 0;
+    font-size: 14px;
   }
 }
