--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,8 +12,39 @@
   max-width: 282px;
   margin: 48px 19px 36px 0;
 }
+@media screen and (max-width: 879px) {
+  .footer {
+    margin: 0 auto 0 60px;
+  }
+  .footer__copyright {
+    max-width: 282px;
+    margin-left: 80px;
+  }
+}
 
-@media screen and (max-width: 621px) {
+@media screen and (max-width: 580px) {
+  .footer {
+    margin: 0 auto;
+  }
+  .footer__copyright {
+    max-width: 282px;
+    margin-right: 0;
+    margin-left: 60px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .footer {
+    max-width: 282px;
+    margin: 0 auto;
+  }
+  .footer__copyright {
+    max-width: 282px;
+    margin-right: 0;
+    margin-left: 19px;
+  }
+}
+
+/* @media screen and (max-width: 621px) {
   .footer__copyright {
     padding-left: 18px;
   }
@@ -26,4 +57,4 @@
     padding: 0;
     font-size: 14px;
   }
-}
+} */
