--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -14,47 +14,33 @@
 }
 @media screen and (max-width: 879px) {
   .footer {
+    max-width: 879x;
     margin: 0 auto 0 60px;
   }
   .footer__copyright {
-    max-width: 282px;
     margin-left: 80px;
   }
 }
 
 @media screen and (max-width: 580px) {
   .footer {
-    margin: 0 auto;
+    max-width: 580px;
   }
   .footer__copyright {
-    max-width: 282px;
+    max-width: 580px;
+
     margin-right: 0;
-    margin-left: 60px;
+    margin-left: 90px;
   }
 }
 @media screen and (max-width: 320px) {
   .footer {
     max-width: 282px;
-    margin: 0 auto;
-  }
-  .footer__copyright {
-    max-width: 282px;
-    margin-right: 0;
     margin-left: 19px;
   }
-}
-
-/* @media screen and (max-width: 621px) {
   .footer__copyright {
-    padding-left: 18px;
-  }
-}
-@media screen and (max-width: 560px) {
-  .footer {
     max-width: 282px;
+    margin-left: 0;
+    margin-right: 0;
   }
-  .footer__copyright {
-    padding: 0;
-    font-size: 14px;
-  }
-} */
+}
