--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -3,8 +3,6 @@
   display: flex;
   align-items: center;
   padding: 40px 0 51px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 .profile__info {
   display: flex;
@@ -52,11 +50,7 @@
   margin: 0 30px 0 0;
   background-position: center;
 }
-.profile__title-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-}
+
 .profile__edit-button {
   height: 24px;
   width: 24px;
@@ -112,7 +106,6 @@
   }
   .profile__title {
     font-size: 22px;
-    height: 38px;
   }
   .profile__edit-button {
     height: 18px;
@@ -120,7 +113,6 @@
   }
   .profile__add-button {
     margin-right: 0;
-    width: 150px;
   }
 }
 @media screen and (max-width: 580px) {
@@ -150,5 +142,9 @@
   }
   .profile__add-button {
     margin: 0;
+  }
+  .profile__description {
+    font-size: 14px;
+    line-height: 17px;
   }
 }
