--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url(../blocks/profile.css);
 @import url(../blocks/card.css);
 @import url(../scripts/index.js);
+@import url(../blocks/modal.css);
