--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -15,14 +15,14 @@
   background-color: #fff;
   margin: auto;
   border-radius: 10px;
+  width: 430px;
+  height: 330px;
 }
 .modal__close {
   width: 40px;
   height: 40px;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
-  /*top: -40px;
-  right: -40px;*/
   background-color: transparent;
   border: none;
   background-image: url(../images/Close\ Icon.png);
@@ -30,6 +30,10 @@
   background-size: contain;
   position: absolute;
   cursor: pointer;
+  padding: 0;
+}
+.modal__close:hover {
+  opacity: 0.6;
 }
 .modal__opened {
   display: flex;
@@ -39,6 +43,76 @@
   color: #fff;
   background-color: #000;
   border: none;
+  padding: 0;
+  font-family: Inter, "Arial", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  width: 358px;
+  height: 50px;
+  text-align: center;
+  margin: 48px 36px 36px;
+}
+.modal__button:hover {
+  opacity: 0.6;
 }
 .modal__form {
+  width: 358px;
+  height: 28px;
+  margin: 0 36px 48px;
+}
+.modal__input {
+  border: none;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.2);
+  max-width: 358px;
+  width: 100%;
+  font-family: Inter, "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  margin-bottom: 30px;
+  padding: 0;
+}
+.modal__heading {
+  font-family: Inter, "Arial", sans-serif;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 23px;
+  text-align: left;
+  margin: 34px 64px 54px 36px;
+}
+
+@media screen and (max-width: 589px) {
+  .modal__container {
+    width: 282px;
+    height: 322px;
+  }
+  .modal__close {
+    height: 26px;
+    width: 26px;
+  }
+  .modal__input {
+    max-width: 238px;
+  }
+  .modal__button {
+    width: 238px;
+    height: 46px;
+    margin: 0 22px;
+  }
+  .modal__form {
+    margin: 25px 22px;
+    width: 238px;
+  }
+  .modal__heading {
+    margin-left: 22px;
+  }
+}
+@media screen and (max-width: 415px) {
+  .modal__container {
+    padding: 0 16px;
+  }
+}
+@media screen and (max-width: 376px) {
+  .modal__container {
+  }
 }
