--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -52,6 +52,7 @@
   height: 50px;
   text-align: center;
   margin: 48px 36px 36px;
+  cursor: pointer;
 }
 .modal__button:hover {
   opacity: 0.6;
@@ -69,7 +70,7 @@
   font-family: Inter, "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  line-height: 17px;
+  line-height: 30px;
   margin-bottom: 30px;
   padding: 0;
 }
@@ -82,9 +83,45 @@
   margin: 34px 64px 54px 36px;
 }
 
-@media screen and (max-width: 589px) {
+@media screen and (max-width: 580px) {
+    .modal__container {
+        max-width: 282px;
+        height: 322px;
+    }
+    .modal__input {
+        max-width: 238px;
+    }
+    .modal__button {
+        width: 238px;
+        height: 46px;
+        margin: 45px 22px 0 22px;
+    }
+    .modal__close {
+        height: 26px;
+        width: 26px;
+        bottom: calc(100% + 10px);
+        left: calc(100% - 33px);
+      }
+    .modal__form {
+        margin: 25px 22px;
+        width: 238px;
+        margin-bottom: 45px;
+        
+      }
+      .modal__heading {
+        margin-left: 22px;
+      }
+}
+@media screen and (max-width: 320px) {
+    .modal__container {
+        max-width: 282px;   
+        height: 322px;
+    }
+}
+
+/*@media screen and (max-width: 589px) {
   .modal__container {
-    width: 282px;
+    max-width: 282px;
     height: 322px;
   }
   .modal__close {
@@ -115,4 +152,13 @@
 @media screen and (max-width: 376px) {
   .modal__container {
   }
+}
+@media screen and (max-width: 320px) {
+  .modal__container {
+    width: 282px;
+    align-items: center;
+  }
+  .modal__close {
+    bottom: calc(100% + 10px);
+    left: calc(100% - 33px);
 }
