--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -83,10 +83,13 @@
   margin: 34px 64px 54px 36px;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 568px) {
   .modal__container {
-    width: 282px;
-    height: 322px;
+    max-width: calc(100% - 19px * 2);
+    width: 100%;
+    /*height: 322px;*/
+    margin-top: 8px;
+    padding: 25px 22px;
   }
   .modal__input {
     max-width: 238px;
@@ -103,15 +106,15 @@
   }
   .modal__form {
     margin: 25px 22px;
-    width: 238px;
+    max-width: 238px;
     margin-bottom: 45px;
   }
   .modal__heading {
     margin-left: 22px;
   }
 }
-@media screen and (max-width: 320px) {
+/*@media screen and (max-width: 320px) {
   .modal__container {
-    max-width: calc(100% - 19px * 2);
+    
   }
 }
