--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -86,9 +86,8 @@
 @media screen and (max-width: 568px) {
   .modal__container {
     max-width: calc(100% - 19px * 2);
-    width: 100%;
-    /*height: 322px;*/
-    margin-top: 8px;
+    height: 322px;
+    margin-top: 123px 19px;
     padding: 25px 22px;
   }
   .modal__input {
@@ -111,10 +110,5 @@
   }
   .modal__heading {
     margin-left: 22px;
-  }
-}
-/*@media screen and (max-width: 320px) {
-  .modal__container {
-    
   }
 }
