--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -36,7 +36,7 @@
 .modal__close:hover {
   opacity: 0.6;
 }
-.modal__opened {
+.modal_opened {
   display: flex;
   border: none;
   visibility: visible;
