--- a/blocks/card.css
+++ b/blocks/card.css
@@ -42,3 +42,6 @@
 .card__like-button:hover {
   opacity: 0.5;
 }
+.card__like-button_active {
+  background-image: url(../images/like-active.png);
+}
