--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -84,6 +84,25 @@
   margin: 0 0 54px 0;
 }
 
+.modal__add-button {
+  color: #fff;
+  background-color: #000;
+  border: none;
+  padding: 0;
+  font-family: Inter, "Arial", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  width: 358px;
+  height: 50px;
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
+}
+.modal__add-button:hover {
+  opacity: 0.6;
+}
+
 @media screen and (max-width: 568px) {
   .modal__container {
     max-width: calc(100% - 19px * 2);
