--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,3 +45,10 @@
 .card__like-button_active {
   background-image: url(../images/like-active.png);
 }
+card_delete-button {
+  width: 18px;
+  height: 19px;
+  background-image: url(..//images/trashcan.svg);
+  position: relative;
+  border: none;
+}
