--- a/blocks/card.css
+++ b/blocks/card.css
@@ -46,9 +46,8 @@
   background-image: url(../images/like-active.png);
 }
 card_delete-button {
-  width: 18px;
-  height: 19px;
-  background-image: url(..//images/trashcan.svg);
-  position: relative;
-  border: none;
+  width: 19px;
+  height: 18px;
+  background-image: url(../images/trashwhite.svg);
+  /*position: relative;*/
 }
